1. lock check from Home component calender view 2. Form reset on Night shift selection in timesheet form 3. Date disabled in update